{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 81,
  "lineage": "77dcd182-485e-cffe-fe51-06c773ea2c2e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559413641916:vpc/vpc-059d430abce443bb6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e9c85493ffa09ab3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d991e19d3b62e078",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059d430abce443bb6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0068f9454d1bf78de",
            "owner_id": "559413641916"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559413641916:security-group/sg-025c1eade18fa70f5",
            "description": "Security group for watts-my-electricity-bill-be application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025c1eade18fa70f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "watts-my-electricity-bill-be-dev-sg",
            "name_prefix": "",
            "owner_id": "559413641916",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-059d430abce443bb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559413641916:security-group/sg-0193f1c3d568d6f61",
            "description": "Security group for all RDS Postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0193f1c3d568d6f61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ECS to Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025c1eade18fa70f5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-postgres-sg",
            "name_prefix": "",
            "owner_id": "559413641916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-postgres-sg"
            },
            "tags_all": {
              "Name": "rds-postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059d430abce443bb6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}